chore: fix modal overflow behavior

--- a/src/components/modal-base/Modal.css
+++ b/src/components/modal-base/Modal.css
@@ -48,7 +48,6 @@
     left: 0;
     min-width: var(--screen-min-width);
     min-height: var(--screen-min-height);
-    overflow: auto;
     padding: var(--screen-spacing);
     opacity: 0;
     transition: opacity var(--modal-overlay-duration) linear;
@@ -82,10 +81,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: 999999;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: scroll;
     display: none;
 }
 
